compiler/testData/diagnostics/tests/overload/ConflictingOverloadsIdenticalValsInClass.jet
class Aaa() {
    val <!REDECLARATION, REDECLARATION!>a<!> = 1
    val <!REDECLARATION, REDECLARATION!>a<!> = 1
}
